@@ -2,7 +2,7 @@
 # CHANGES - change log of OTRS
 # Copyright (C) 2001-2010 OTRS AG, http://otrs.org/
 # --
-# $Id: CHANGES,v 1.1440 2010-09-28 22:35:07 cg Exp $
+# $Id: CHANGES,v 1.1441 2010-09-29 05:58:42 martin Exp $
 # --
 # This software comes with ABSOLUTELY NO WARRANTY. For details, see
 # the enclosed file COPYING for license information (AGPL). If you
@@ -587,6 +587,8 @@
  - 2009-09-15 Improved performance of the PDF backend.
 
 2.4.9 (2010/??/??)
+ - 2010-09-29 Fixed bug#6030 - Event notifications get's fired several times on
+    event "TicketFreeTextUpdate".
  - 2010-09-14 Fixed bug#5541 - Dashboard Chart generates error in webserver log.
  - 2010-09-09 Fixed bug#5462 - Kernel::System::Ticket::TicketEscalationIndexBuild()
     does not invalidate the cache.
